--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 .background  {
- background-image: url('img/123.gif');
+ background-image: url('img/main_image.jpeg');
  background-size: cover;
  width: 100%;
  height: 800px;
@@ -14,4 +14,12 @@
 .main-title {
   margin: 0 !important;
   padding-top: 50px;
+}
+
+.main-description {
+  background-image: url('img/main_desc.jpeg');
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  background-repeat: no-repeat;
 }
