--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 .background  {
- background-image: url('img/main_image.jpeg');
+ background-image: url('img/main_image.png');
  background-size: cover;
  width: 100%;
  height: 800px;
