--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -17,9 +17,12 @@
 }
 
 .main-description {
-  background-image: url('img/main_desc.jpeg');
-  background-size: cover;
   width: 100%;
-  height: 700px;
-  background-repeat: no-repeat;
+  height: auto;
+}
+
+.brand-image {
+  width: 50px;
+  height: 25px;
+  margin-left: 20px;
 }
